--- a/src/Resources/assets/src/scss/components/_input-imgs.scss
+++ b/src/Resources/assets/src/scss/components/_input-imgs.scss
@@ -10,28 +10,35 @@
     &__thumb {
         display: inline-block;
         position: relative;
-        margin: 10px;
+        width: percentage(3 / 12);
+        padding: 10px;
         background-repeat: no-repeat;
         background-size: cover;
         cursor: grab;
 
         &-img {
-            max-width: 100px;
-            max-height: 100px;
+            max-width: 100%;
         }
 
         &-remove {
             display: none;
             position: absolute;
-            top: 50%;
-            left: 50%;
+            top: 0;
+            right: 0;
             align-items: center;
             justify-content: center;
             width: 30px;
             height: 30px;
-            transform: translate(-50%, -50%);
-            background: color('white');
+            border-radius: 50%;
+            background: #0073aa;
+            color: color('white');
+            font-weight: font-weight('bold');
             cursor: pointer;
+
+            &:hover {
+                background: #c00;
+                color: color('white');
+            }
         }
 
         &:hover &-remove {
